--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Jorge Antonio Diaz-Benito Soriano <jorge.diazbenitosoriano@gmail.com>"
   ],
-  "description": "Jorge's personal webpage",
+  "description": "Jorge",
   "main": "index.html",
   "keywords": [
     "Jorge",
