--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.5.4"
+    "polymer": "Polymer/polymer#~0.5.4",
+    "core-elements": "Polymer/core-elements#~0.5.4",
+    "core-icons": "Polymer/core-icons#~0.5.4"
   }
 }
